--- a/container-images/tcib/base/os/cinder-base/cinder-backup/cinder-backup.yaml
+++ b/container-images/tcib/base/os/cinder-base/cinder-backup/cinder-backup.yaml
@@ -1,3 +1,7 @@
+tcib_envs:
+  MALLOC_ARENA_MAX: 1
+  MALLOC_MMAP_THRESHOLD_: 131072
+  MALLOC_TRIM_THRESHOLD_: 262144
 tcib_actions:
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 - run: mkdir -p /etc/libqb
