Downgrade pacemaker and resource-agents
The patch downgrades:
pacemaker pacemaker-remote resource-agents
in container builds to avoid
errors at deployment step 5 with latest versions.

Related-Bug: #1978997
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: Ie5288864cd6f346a5bb5b481b4aa5dbd1abb9f47

--- a/container-images/tcib/base/redis/redis.yaml
+++ b/container-images/tcib/base/redis/redis.yaml
@@ -1,6 +1,9 @@
 tcib_actions:
 - run: bash /usr/local/bin/uid_gid_manage {{ tcib_user }}
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
+- run: >-
+    if [ '{{ tcib_distro }}' == 'centos' ] && [ '{{ tcib_release }}' == '9' ]; then
+    dnf -y downgrade pacemaker pacemaker-remote resource-agents; fi
 - run: mkdir /etc/libqb
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/redis /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
