--- a/container-images/tcib/base/redis/redis.yaml
+++ b/container-images/tcib/base/redis/redis.yaml
@@ -1,6 +1,9 @@
 tcib_actions:
 - run: bash /usr/local/bin/uid_gid_manage {{ tcib_user }}
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
+- run: >-
+    if [ '{{ tcib_distro }}' == 'centos' ] && [ '{{ tcib_release }}' == '9' ]; then
+    dnf -y downgrade pacemaker-2.1.2-4.el9 pacemaker-remote-1.2-4.el9 resource-agents-4.10.0-17.el9; fi
 - run: mkdir /etc/libqb
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/redis /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
