--- a/container-images/tcib/base/collectd/collectd.yaml
+++ b/container-images/tcib/base/collectd/collectd.yaml
@@ -45,6 +45,8 @@ tcib_packages:
   - collectd-write_kafka
   - collectd-write_prometheus
   - python3-sqlalchemy-collectd
+  - podman-remote
+  - jq
   rhel:
   - python3-collectd-rabbitmq-monitoring
   x86_64:
