--- a/container-images/tcib/base/os/manila-base/manila-share/manila-share.yaml
+++ b/container-images/tcib/base/os/manila-base/manila-share/manila-share.yaml
@@ -1,6 +1,7 @@
 tcib_actions:
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 - run: mkdir -p /etc/libqb
+- run: ln -s /usr/share/openstack-tripleo-common/healthcheck/manila-api /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
   - ceph-common
