FFWD3: Resolve deployment error with become
 Check if deployed file exists for CADeployment | controller-0 | error={"changed": false, "msg": "Permission denied"}

Upgrade returns this error which is simply caused by missing become.

Change-Id: I1bf6987f2feab13ee22ffd240e7a5b0c19346c58
(cherry picked from commit c9e8b25bd1ac7ef426a25ffb28fa2f2b65f34d0b)

--- a/tripleo_common/templates/deployments.yaml
+++ b/tripleo_common/templates/deployments.yaml
@@ -154,6 +154,7 @@
     - not ansible_check_mode|bool
 
 - name: "Check if deployed file exists for {{ item }}"
+  become: true
   stat:
     path: /var/lib/heat-config/deployed/{{ deployment_uuid }}.json
   register: deployed_file_stat
