Update UNDERCLOUD_SERVICES list to reflect current undercloud services
This change removes from UNDERCLOUD_SERVICES constant all services that
are marked as DEPRECATED in undercloud.conf.sample file.
It leaves only tripleo_ironic_conductor in the list, because all other
services has DEPRECATED note and are disabled undercloud.conf by
default.

Solves: #1983469

Conflicts:
    tripleo_common/tests/test_inventory.py

Change-Id: Id719b034c7efda03fd7e991737d6c90902b8ccda
(cherry picked from commit d8d781f97012b4813a5ce6914a71466db6207231)

--- a/tripleo_common/tests/inventory_data/undercloud_static_merged.yaml
+++ b/tripleo_common/tests/inventory_data/undercloud_static_merged.yaml
@@ -12,7 +12,6 @@ Undercloud:
     plan: null
     plans: []
     project_name: admin
-    undercloud_service_list: [tripleo_nova_compute, tripleo_heat_engine, tripleo_ironic_conductor,
-      tripleo_swift_container_server, tripleo_swift_object_server, tripleo_mistral_engine]
+    undercloud_service_list: [tripleo_ironic_conductor]
     undercloud_swift_url: https://192.168.24.2:13808/v1/AUTH_ad15d77254c94b03b1534a261059cd76
     username: admin
