Drop collections/roles list installed from ansible-galaxy
requirements.yaml contains the list of collections and roles
of tripleo-ansible. These collections and roles are already
shipped as a dependencies of tripleo-ansible rpm[1]. It does not
make sense to re-install it from galaxy.

We need to keep this file if someone wants to install custom
collections and roles in the tripleo-ansible-ee container.

[1]. https://github.com/rdo-packages/tripleo-ansible-distgit/blob/rpm-master/tripleo-ansible.spec#L25

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: Ia7ff64c01cb470745f7f9857c7d984f83b36113d

--- a/container-images/kolla/tripleo-ansible-ee/requirements.yaml
+++ b/container-images/kolla/tripleo-ansible-ee/requirements.yaml
@@ -14,24 +14,6 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-# Roles and collections dependencies of tripleo-ansible
-# https://opendev.org/openstack/tripleo-ansible/src/branch/master/tripleo_ansible/requirements.yml
-collections:
-  - name: https://opendev.org/openstack/ansible-collections-openstack.git
-    type: git
-  - containers.podman
-  - community.general
-  - ansible.posix
-  - community.crypto
-roles:
-  - name: openstack-operations
-    scm: git
-    src: https://opendev.org/openstack/ansible-role-openstack-operations
-    version: master
-    trackbranch: master
-  # ansible-config_template action plugin
-  - name: config_template
-    scm: git
-    src: https://opendev.org/openstack/ansible-config_template
-    version: master
-    trackbranch: master
+# Custom Roles and collections not shipped as a part of tripleo-ansible
+collections: []
+roles: []
