Add Python MySQL drivers to the horizon container
Horizon has an option for using a MySQL database for session storage in
place of Memcached, and some customers prefer that option. However, for
that to work we need to have the Python MySQL drivers installed in the
container.

Change-Id: Ic31b39811eebc0a0e65df94e08e38b39d24a7015
(cherry picked from commit e80399dc3dae5b5ebf61f0fb86b835b6c8fee46c)

--- a/container-images/tcib/base/os/horizon/horizon.yaml
+++ b/container-images/tcib/base/os/horizon/horizon.yaml
@@ -10,6 +10,7 @@ tcib_packages:
   - httpd
   - mod_ssl
   - python3-mod_wsgi
+  - python3-PyMySQL
   with_localization:
   - openstack-dashboard
   - openstack-heat-ui
