Support ansible inventory merging
tripleo-ansible-inventory was deprecated in
Ie02259336c763cfa980b59ad64f9e478d05690fb leaving no method to merge
"multistack" inventories.

This patch restructures the inventory to allow merging via ansible
e.g by passing multiple inventory files or an inventory dir

The <plan_name> group is now a child of the "allovercloud" group (was
vice-versa) allowing the allovercloud group to be merged from multiple
inventory files.

The "overcloud" group is no longer a special case and will only exist if
that is the plan name.

generate_tripleo_ansible_inventory now generates a merged inventory to
avoid conflicts in <role_name> group vars.

Depends-On: I05f4989b0f14d56d3c33f91b3cccb85b729987cb
Change-Id: I540267b22756ba64763ee2cb8f78720b7e22e7ac

--- a/tripleo_common/tests/inventory_data/cell1_static.yaml
+++ b/tripleo_common/tests/inventory_data/cell1_static.yaml
@@ -50,20 +50,16 @@ Compute:
     tripleo_role_name: Compute
     tripleo_role_networks: [ctlplane, external, internal_api, management, storage,
       storage_mgmt, tenant]
-allovercloud:
+cell1:
   children:
     CellController: {}
     Compute: {}
   vars: {container_cli: podman, ctlplane_vip: 192.168.24.21, external_vip: 10.0.0.6,
     internal_api_vip: 172.16.2.11, redis_vip: 192.168.24.21, storage_mgmt_vip: 172.16.3.26,
     storage_vip: 172.16.1.131}
-cell1:
+allovercloud:
   children:
-    allovercloud: {}
-overcloud:
-  children:
-    allovercloud: {}
-  deprecated: Deprecated by allovercloud group in Ussuri
+    cell1: {}
 kernel:
   children:
     CellController: {}
