Generic inventory and playbook
This patch introduces the capacity for the tripleo_entrypoint.sh
script to generate an inventory and/or a playbook from env
variables passed to the runner container by the operator itself

The ansibleee-operator will take care of filling the contents of the
env variables in [1] and [2]

[1] https://github.com/openstack-k8s-operators/ansibleee-operator/pull/20
[2] https://github.com/openstack-k8s-operators/ansibleee-operator/pull/9

Change-Id: I030518bb8807aad9fb0d480a130d327522de707d

--- a/container-images/tcib/tripleo-ansible-ee/tripleo-ansible-ee.yaml
+++ b/container-images/tcib/tripleo-ansible-ee/tripleo-ansible-ee.yaml
@@ -12,6 +12,7 @@ tcib_actions:
 # to the tcib file so the subsequent image let the operator set temporary permissions
 # on the openshift uid for ansible to work.
 - run: chmod g=u /etc/passwd /etc/group
+- run: chmod -R 777 /usr/share/ansible
 - workdir: /usr/share/ansible/roles
 - run: >-
     if [ -f "$TRIPLEO_ANSIBLE_REQ" ]; then
