--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
-minversion = 3.8
+minversion = 3.18.0
 envlist = linters,py
-skipsdist = True
 
 # Automatic envs will only use the python version appropriate to that
 # env and ignore basepython inherited from [testenv] if we set
@@ -36,7 +35,7 @@ deps =
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = stestr run {posargs}
-whitelist_externals =
+allowlist_externals =
     bash
     tox
 
@@ -47,9 +46,9 @@ commands = bash -c "{toxinidir}/scripts/bindep-install"
 # deprecated: covered by linters
 [testenv:pep8]
 skip_install = true
-deps =
+deps = {[testenv:linters]deps}
 commands =
-    tox -e linters -- flake8
+    python -m pre_commit run -a -- flake8
 
 [testenv:venv]
 commands = {posargs}
@@ -77,9 +76,9 @@ commands = oslo_debug_helper {posargs}
 # deprecated: covered by linters
 [testenv:bashate]
 skip_install = true
-deps =
+deps = {[testenv:linters]deps}
 commands =
-    tox -e linters -- bashate
+    python -m pre_commit run -a -- bashate
 
 [testenv:linters]
 skip_install = true
@@ -97,6 +96,6 @@ commands = bash -c tools/releasenotes_tox.sh
 [testenv:requirements]
 deps =
   -egit+https://opendev.org/openstack/requirements#egg=openstack-requirements
-whitelist_externals = sh
+allowlist_externals = sh
 commands =
     sh -c '{envdir}/src/openstack-requirements/playbooks/files/project-requirements-change.py --req {envdir}/src/openstack-requirements --local {toxinidir} master'
