Adapt to tox 4.x
skipdist=True does not work with latest tox 4.x.

Also, skip_install=True without any deps causes the following task
failure in CI, because the log directory is no longer created. This
change ensures we use the individual environment instead of using
a different environment.

TASK [tox : Install any sibling python packages]
...
ubuntu-jammy | FileNotFoundError: [Errno 2] No such file or directory:
'/home/zuul/src/opendev.org/openstack/tripleo-common/.tox/pep8/log/
pep8-siblings.txt'

Closes-Bug: #2000357
Co-Authored-By: Rabi Mishra <ramishra@redhat.com>
Change-Id: I638649e0722011ad39cc94f0cc0bfcf65cf1518b

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 minversion = 3.18.0
 envlist = linters,py
-skipsdist = True
 
 # Automatic envs will only use the python version appropriate to that
 # env and ignore basepython inherited from [testenv] if we set
@@ -47,9 +46,9 @@ commands = bash -c "{toxinidir}/scripts/bindep-install"
 # deprecated: covered by linters
 [testenv:pep8]
 skip_install = true
-deps =
+deps = {[testenv:linters]deps}
 commands =
-    tox -e linters -- flake8
+    python -m pre_commit run -a -- flake8
 
 [testenv:venv]
 commands = {posargs}
@@ -77,9 +76,9 @@ commands = oslo_debug_helper {posargs}
 # deprecated: covered by linters
 [testenv:bashate]
 skip_install = true
-deps =
+deps = {[testenv:linters]deps}
 commands =
-    tox -e linters -- bashate
+    python -m pre_commit run -a -- bashate
 
 [testenv:linters]
 skip_install = true
