--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -51,6 +51,15 @@ tcib_actions:
     if [ '{{ tcib_distro }}' == 'centos' ];then
     if [ -n "$(rpm -qa redhat-release)" ];then rpm -e --nodeps redhat-release; fi ;
     dnf -y install centos-stream-release; fi
+# TODO: Temporary pinning nettle to 3.8-3.el9, so it can be reinstalled from centos-9 repos.
+# nettle-3.8-3 is already installed in ubi9 image, but it conflicts with newer versions on gnutls
+# installed from centos-9 repos. This workaround can be reverted once ubi9.2 is released, which
+# should contain a newer version of gnutls with fixes to run under FIPS mode.
+# See: https://bugzilla.redhat.com/show_bug.cgi?id=2154924 and
+# https://bugs.launchpad.net/tripleo/+bug/1984237
+- run: >-
+    if [ '{{ tcib_release }}' == '9' ];then
+    dnf -y install nettle-3.8-3.el9; fi
 - run: dnf update --excludepkgs redhat-release -y && dnf clean all && rm -rf /var/cache/dnf
 tcib_cmd: kolla_start
 tcib_entrypoint: dumb-init --single-child --
