--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -10,7 +10,9 @@
       - tripleo-undercloud-jobs-pipeline
       - tripleo-buildimage-jobs
       - tripleo-standalone-scenarios-pipeline
-      - tripleo-upgrades-master-pipeline
+# TODO(cjeanner) uncomment this once this is in:
+# https://review.opendev.org/q/I540c681687f5502aaa2e0b9d8b81b5fef83b2bc2
+#      - tripleo-upgrades-master-pipeline
     vars:
       ensure_global_symlinks: true
     check:
