Re-enable upgrades jobs following content-provider fix
Following I540c681687f5502aaa2e0b9d8b81b5fef83b2bc2 merge in stable/Zed,
we can now re-add the upgrades jobs.

Depends-On: https://review.opendev.org/c/openstack/tripleo-common/+/869207
Related-Bug: #2001626
Change-Id: Ia78c7be40a7bc9ff392a1286b3d6de7a82c47bb9

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -10,9 +10,7 @@
       - tripleo-undercloud-jobs-pipeline
       - tripleo-buildimage-jobs
       - tripleo-standalone-scenarios-pipeline
-# TODO(cjeanner) uncomment this once this is in:
-# https://review.opendev.org/q/I540c681687f5502aaa2e0b9d8b81b5fef83b2bc2
-#      - tripleo-upgrades-master-pipeline
+      - tripleo-upgrades-master-pipeline
     vars:
       ensure_global_symlinks: true
     check:
