Fix still missing become to get deployment result
This is follow-up of I1bf6987f2feab13ee22ffd240e7a5b0c19346c58 and
fixes the missing become to read the deployment result. The previous
change fixed only the task to check whether the result file exists.

Change-Id: I742891ca11d77ef4b280d1a1518667992563a16a

--- a/tripleo_common/templates/deployments.yaml
+++ b/tripleo_common/templates/deployments.yaml
@@ -160,6 +160,7 @@
   register: deployed_file_stat
 
 - name: "Check previous deployment rc for {{ item }}"
+  become: true
   shell: |
     exit $(jq .deploy_status_code /var/lib/heat-config/deployed/{{ deployment_uuid }}.notify.json)
   register: previous_deployment_result
