TCIB: Add cinder-backup extend_start.sh script
Add a kolla_extend_start script to the cinder-backup service that
ensures /var/lib/cinder is owned by the 'cinder' user. See
I2d82c1ca86735d2a8d69b3e28e8cea7acd637f0b for details on what was
done for the cinder-volume service. cinder-backup also needs to run
the script because there's no guarantee the cinder-volume service
is running on every cinder-backup node.

Resolves: rhbz#2167954
Related-Bug: #1908750
Change-Id: I7fcca9fbfea87ac4b245856a3aecae9ffd211938
(cherry picked from commit b6cf34a9536ce413b2a46ab455c54e4488f49f2d)

--- a/container-images/tcib/base/os/cinder-base/cinder-backup/cinder-backup.yaml
+++ b/container-images/tcib/base/os/cinder-base/cinder-backup/cinder-backup.yaml
@@ -4,7 +4,9 @@ tcib_envs:
   MALLOC_TRIM_THRESHOLD_: 262144
 tcib_actions:
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: mkdir -p /etc/libqb
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/cinder-backup/extend_start.sh /usr/local/bin/kolla_extend_start
+- run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/cinder-backup/cinder-backup-sudoers /etc/sudoers.d/cinder-backup-sudoers
+- run: chmod 755 /usr/local/bin/kolla_extend_start && chmod 440 /etc/sudoers.d/cinder-backup-sudoers && mkdir -p /etc/libqb
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/cinder-backup /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
