--- a/container-images/tcib/base/os/nova-base/nova-libvirt/nova-libvirt.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-libvirt/nova-libvirt.yaml
@@ -2,6 +2,7 @@ tcib_actions:
 - run: if [ "$(uname -m)" == "x86_64" ]; then dnf -y install {{ tcib_packages['x86_64'] | join(' ') }}; fi
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/nova-libvirt /openstack/healthcheck && chmod a+rx /openstack/healthcheck
+tcib_entrypoint: ''
 tcib_packages:
   common:
   - ceph-common
