--- a/image-yaml/overcloud-hardened-images-uefi-python3.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-python3.yaml
@@ -38,7 +38,7 @@ disk_images:
     environment:
       DIB_PYTHON_VERSION: '3'
       DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf bluetooth'
-      DIB_BOOTLOADER_DEFAULT_CMDLINE: 'console=tty0 console=ttyS0,115200'
+      DIB_BOOTLOADER_DEFAULT_CMDLINE: ''
       DIB_IMAGE_SIZE: '6'
       COMPRESS_IMAGE: '1'
       DIB_BLOCK_DEVICE: 'efi'
