Suppress console=tty0 in kernel arguments
Resolves: rhbz#2179366
Depends-On: https://review.opendev.org/c/openstack/diskimage-builder/+/880008
Change-Id: I54b4408e33fc7b9c991d3024ee0ae8d2d65f6ee9

--- a/image-yaml/overcloud-hardened-images-uefi-python3.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-python3.yaml
@@ -39,6 +39,7 @@ disk_images:
       DIB_PYTHON_VERSION: '3'
       DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf bluetooth'
       DIB_BOOTLOADER_DEFAULT_CMDLINE: ''
+      DIB_BOOTLOADER_VIRTUAL_TERMINAL: ''
       DIB_IMAGE_SIZE: '6'
       COMPRESS_IMAGE: '1'
       DIB_BLOCK_DEVICE: 'efi'
