--- a/image-yaml/overcloud-hardened-images-python3-rt-kernel.yaml
+++ b/image-yaml/overcloud-hardened-images-python3-rt-kernel.yaml
@@ -37,6 +37,6 @@ disk_images:
     environment:
       DIB_PYTHON_VERSION: '3'
       DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf vfat bluetooth'
-      DIB_BOOTLOADER_DEFAULT_CMDLINE: 'nofb nomodeset vga=normal console=tty0 console=ttyS0,115200 audit=1 nousb'
+      DIB_BOOTLOADER_DEFAULT_CMDLINE: 'nofb vga=normal console=tty0 console=ttyS0,115200 audit=1 nousb'
       DIB_IMAGE_SIZE: '40'
       COMPRESS_IMAGE: '1'
