--- a/image-yaml/overcloud-hardened-images-uefi.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi.yaml
@@ -39,7 +39,7 @@ disk_images:
     environment:
       DIB_PYTHON_VERSION: '2'
       DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf bluetooth'
-      DIB_BOOTLOADER_DEFAULT_CMDLINE: 'nofb vga=normal console=tty0 console=ttyS0,115200 audit=1 nousb'
+      DIB_BOOTLOADER_DEFAULT_CMDLINE: 'nofb vga=normal console=tty0 console=ttyS0,115200 nousb'
       DIB_IMAGE_SIZE: '40'
       COMPRESS_IMAGE: '1'
       DIB_BLOCK_DEVICE: 'efi'
