Wire-in nova_migration kolla user creation
Follow-up I2813d5fc4e12d8b9532cbc32a14cc088328efe62

Make sure the nova_migration user is created during TCIB

Change-Id: Iaa119bc36b83b8afc6ffc0e94a1d07aae2489b5e
Related: rhbz#2181897
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>

--- a/container-images/tcib/base/os/nova-base/nova-base.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-base.yaml
@@ -1,5 +1,5 @@
 tcib_actions:
-- run: bash /usr/local/bin/uid_gid_manage nova
+- run: bash /usr/local/bin/uid_gid_manage nova nova_migration
 - run: mkdir -p /etc/ssh && touch /etc/ssh/ssh_known_host
 - run: dnf install -y {{ tcib_packages | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
 tcib_packages:
