Ensure non-empty DIB_BOOTLOADER_DEFAULT_CMDLINE
Having an empty DIB_BOOTLOADER_DEFAULT_CMDLINE results in the
bootloader element adding back defaults which we explicitly do not
want (nomodeset, etc)

This change adds back one valid argument which makes no changes to
kernel behaviour. Merging this will likely be much quicker than
merging the diskimage-builder fix.

Related: https://review.opendev.org/c/openstack/diskimage-builder/+/884644
Change-Id: Idfdfe249c53b439cc5fc0d7620eeac92c93edbe5

--- a/image-yaml/overcloud-hardened-images-uefi.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi.yaml
@@ -39,7 +39,9 @@ disk_images:
     environment:
       DIB_PYTHON_VERSION: '2'
       DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf bluetooth'
-      DIB_BOOTLOADER_DEFAULT_CMDLINE: ''
+      # TODO remove memtest=0 when this change is available:
+      # https://review.opendev.org/c/openstack/diskimage-builder/+/884644
+      DIB_BOOTLOADER_DEFAULT_CMDLINE: 'memtest=0'
       DIB_BOOTLOADER_VIRTUAL_TERMINAL: ''
       DIB_IMAGE_SIZE: '40'
       COMPRESS_IMAGE: '1'
