Disable pam_loguinuid for crond
Currently we run some crond processes with -n option but the cron jobs
fails because of pam errors. According to man page we have to remove
pam_loginuid.so in case we run crond in the foreground.

~~~
       -n     Tells the daemon to run in the foreground.  This can be
              useful when starting it out of init. With this option is
              needed to change pam setting.  /etc/pam.d/crond must not
              enable pam_loginuid.so module.
~~~

Resolves: rhbz#2219765
Change-Id: Id384780e8394b40a91761e7fbbc0f8e44263d681

--- a/container-images/tcib/base/os/os.yaml
+++ b/container-images/tcib/base/os/os.yaml
@@ -1,5 +1,6 @@
 tcib_actions:
 - run: dnf install -y {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
+- run: sed -ri '/^session(\s)+required(\s+)pam_loginuid.so$/d' /etc/pam.d/crond
 tcib_packages:
   common:
   - cronie
